--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
-    <head></head>
+    <head>
+        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <title>bootstrap</title>
+    </head>
     <body></body>
 </html>
