--- a/index.html
+++ b/index.html
@@ -4,5 +4,10 @@
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <title>bootstrap</title>
     </head>
-    <body></body>
+    <body>
+        <!-- 
+        <div class="products-container">
+            <h2 class=text-center mb-4>Our Products</h2>
+            -->
+    </body>
 </html>
