--- a/index.html
+++ b/index.html
@@ -5,9 +5,23 @@
         <title>bootstrap</title>
     </head>
     <body>
-        <!-- 
+<!--         
         <div class="products-container">
             <h2 class=text-center mb-4>Our Products</h2>
+            <div class="row g-4">
+                <div class="col-md-4">
+                    <div class="card h-100">
+                        <div class="card-body">
+                            <h5 class="card-title">Premium Plan</h5>
+                            <h3 class="card-text text-primary">$29/mo</h3>
+                            <p class="card-text">Perfect for small teams and startups looking to scale their business.</p>
+                            <ul class="list-options">
+                                <li>&#10003; 10 Team Members</li>
+                                <li>&#10003; 100GB Storage</li>
+                                <li>&#10003; Priority Support</li>
+                                <li>&#10003; Advanced Analytics</li>
+                            </ul>
+                            <button class="btn btn-primary">Choose Plan</button>    
             -->
     </body>
 </html>
