--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
                                 <li>&#10003; Priority Support</li>
                                 <li>&#10003; Advanced Analytics</li>
                             </ul>
-                            <button class="btn btn-primary">Choose Plan</button>    
+                            <button class="btn btn-primary">Choose Plan</button>
+                        </div>
+                    </div>
+                </div>
             -->
     </body>
 </html>
