--- a/index.html
+++ b/index.html
@@ -4,5 +4,26 @@
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <title>bootstrap</title>
     </head>
-    <body></body>
-</html>
+    <body>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">FullStack-A</a>
+            </div>
+        </nav>
+        <div class="bg-light py-5">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-lg-6">
+                        <h1 class="display-4">Welcome to Our Platform</h1>
+                        <p class="lead">Discover amazing products and services tailored to your needs. Start your journey with us today.</p>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="img-fluid">
+                            <img src="https://biztechmagazine.com/sites/biztechmagazine.com/files/styles/cdw_hero/public/articles/%5Bcdw_tech_site%3Afield_site_shortname%5D/201804/BizTech-NonprofitVR.jpg?itok=j6z3VCCn" alt="Product Image" class="img-fluid">
+                        </div>
+                    </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </body>
