--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
         <title>bootstrap</title>
     </head>
     <body>
-<<<<<<< HEAD
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">FullStack-A</a>
@@ -26,10 +25,7 @@
                     </div>
                 </div>
             </div>
-        </div>
-    </body>
-=======
-<!--         
+        </div>   
         <div class="products-container">
             <h2 class=text-center mb-4>Our Products</h2>
             <div class="row g-4">
@@ -49,7 +45,72 @@
                         </div>
                     </div>
                 </div>
-            -->
+            
+        <div class="container my-5">
+            <h2 class="text-center mb-4">Plan Comparison</h2>
+            <div class="table-responsive">
+                <table class="table table-striped table-hover">
+                    <thead class="table-dark">
+                        <tr>
+                            <th>Features</th>
+                            <th>Premium</th>
+                            <th>professional</th>
+                            <th>Enterprise</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Team Members</td>
+                            <td>10</td>
+                            <td>50</td>
+                            <td>Unlimited</td>
+                        </tr>
+                        <tr>
+                            <td>Storage Space</td>
+                            <td>100GB</td>
+                            <td>500GB</td>
+                            <td>Unlimited</td>
+                        </tr>
+                        <tr>
+                            <td>Support Level</td>
+                            <td>Priority</td>
+                            <td>24/7</td>
+                            <td>Detailed</td>
+                        </tr>
+                        <tr>
+                            <td>Analytics</td>
+                            <td>Advanced</td>
+                            <td>Advanced</td>
+                            <td>Custom</td>
+                        </tr>
+                        <tr>
+                            <td>API Access</td>
+                            <td>Yes</td>
+                            <td>Yes</td>
+                            <td>Yes</td>
+                        </tr>
+                        <tr>
+                            <td>Custom Integrations</td>
+                            <td>No</td>
+                            <td>Yes</td>
+                            <td>Yes</td>
+                        </tr>
+                        <tr>
+                            <td>White Label</td>
+                            <td>No</td>
+                            <td>No</td>
+                            <td>Yes</td>
+                        </tr>
+                        <tr>
+                            <td>SLA Guarantee</td>
+                            <td>99.5%</td>
+                            <td>99.9%</td>
+                            <td>99.99%</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        </div>        
     </body>
 </html>
->>>>>>> 208c941417229bfa94d48edee2dcfc14999d500f
